# PaRaMeRoS

./: .deepsource.toml  .editorconfig  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.yml  install.sh
.github/: API.yml  Frontend.yml  api.yml  dependabot.yml  docker.yml  test-ci.yml
.github/workflows/: cd-dependabot.yml  cd-docker.yml  ci-api.yml  ci-docker.yml  ci-frontend.yml  codecov-frontend.yml  dependabot.yml  docker.yml  frontend.yml  node.js.yml
api/: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  dev.Dockerfile  diesel.toml  docker-compose.yml
api/.build/src/: main.rs
api/migrations/2025-05-29-110149_users/: up.sql
api/migrations/2025-06-01-143027_events/: up.sql
api/migrations/posts/: up.sql
api/migrations/users/: up.sql
api/src/: main.rs  utils.rs
api/src/api/: event.rs  mod.rs
api/src/api/post/: delete_post.rs  mod.rs  new_post.rs  post.rs  posts.rs  update_post.rs
api/src/api/users/: auth.rs  mod.rs  register.rs  verify.rs
api/src/db/: connection.rs  mod.rs  models.rs  schema.rs
frontend/: .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-env.sh  entrypoint.sh  env.d.ts  index.html  mime.types  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  typed-router.d.ts  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/css/: base.css  cookieconsent.css  main.css
frontend/src/components/: CardComponent.vue  Cards.vue  CardsComponent.vue  CreatePostComponent.vue  FooterComponent.vue  Navbar.vue  NavbarComponent.vue  Section.vue  SectionComponent.vue  createPost.vue
frontend/src/components/icons/: ArrowDown.vue  EyeIcon.vue  EyeSlash.vue  UploadIcon.vue
frontend/src/composables/: Navigation.ts
frontend/src/pages/: About.vue  Imprint.vue  Login.vue  Privacy-Policy.vue  [...404].vue  about.vue  imprint.vue  index.vue  login.vue  privacy-policy.vue
frontend/src/pages/post/: [id].vue
frontend/src/pages/progress-logs/: Create.vue  create.vue  index.vue
frontend/src/pages/team/: Create.vue  create.vue  (+1 more)
(+3 files in other folders)
