[package]
name = "parameros-api"
authors = ["David Frings, aka DevOpsDavid"]
version = "2.0.0"
description = "This is the API / backend from the Official PaRaMeRoS Website"
categories = ["web-programming", "api-bindings"]
homepage = "https://PaRaMeRoS.net"
license = "MIT"
repository = "https://github.com/DavidFrings/PaRaMeRoS-Backend"
rust-version = "1.87"
edition = "2021"

[dependencies]
actix-web = "^4"
actix-multipart = "^0.7"
uuid = { version = "^1.17", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
sqlx = { version = "^0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres"] }
env_logger = "^0.11"
log = "^0.4"
strum_macros = "^0.27"
strum = { version = "^0.27", features = ["derive"] }
derive_more = "^2"
chrono = "^0.4"
reqwest = { version = "^0.12", features = ["json"] }
serde_json = "^1"
futures = "^0.3"
dotenv = "^0.15"
diesel = { version = "^2.2", features = ["postgres", "r2d2"] }
r2d2 = "^0.8"
bcrypt = "^0.17"
jsonwebtoken = "^9"
image = "^0.25"
webp = "^0.3"